fix to login buttons on mobile on home page

--- a/app/output.css
+++ b/app/output.css
@@ -787,6 +787,14 @@ video {
   top: 4%;
 }
 
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-4 {
+  bottom: -1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -3167,6 +3175,10 @@ video {
 
 .pb-0 {
   padding-bottom: 0px;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .text-left {
